--- a/projects/the-landing-page/style.css
+++ b/projects/the-landing-page/style.css
@@ -14,8 +14,13 @@ header, .hero-section {
 
 header {
     display: flex;
-    justify-content: space-between;
-    padding: 20px 100px;
+    /* justify-content: space-between;
+    padding: 20px 100px; */
+    justify-content: center;
+    /* gap: calc(52%); */
+    /* gap: 52vw; */
+    /* gap: clamp(52vw, 10vw + 30%, 40vw); */
+    gap: calc(52vw);
 }
 
 a {
@@ -46,12 +51,13 @@ nav > div {
     color: white;
     padding: 20px;
     padding-bottom: 0;
-    gap: 180px;
+    gap: 20px 180px;
 }
 
 img {
     height: 100%;
     width: auto;
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
 }
 
 .logo {
@@ -68,4 +74,126 @@ img {
 .hero-text {
     flex: 0 1 500px;
     padding-bottom: 20px;
+}
+
+.hero-text > h2 {
+    padding-bottom: 15px;
+    font-size: xx-large;
+}
+
+.explore-section {
+    padding: 30px;
+}
+
+.explore-tools {
+    text-align: center;
+    font-size: 36px;
+    font-weight: 800;
+    color: #1f2937;
+}
+
+.tools {
+    padding-top: 40px;
+    display: flex;
+    flex: 0 1 1;
+    justify-content: center;
+    gap: 30px;
+    flex-flow: row wrap;
+}
+
+.tool-info {
+    display: flex;
+    flex-flow: column wrap;
+    flex: 0 1 200px;
+    justify-content: center;
+    align-items: center;
+    /* box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px; */
+    /* border: 2px solid black; */
+}
+
+.tool-image {
+    width: 100px;
+    height: 100px;
+    /* border: 2px solid red; */
+}
+
+.tool-image img {
+    height: 100%;
+    width: 100%;
+    border-radius: 10px;
+    border: 2px solid #3882f6;
+}
+
+.tool-text {
+    padding: 20px 0;
+    /* border: 2px solid green; */
+    display: flex;
+    font-size: large;
+    font-weight: 700;
+}
+
+.tool-text > a {
+    color: #1f2937;
+}
+
+footer {
+    background-color: #1f2937;
+    color: white;
+    text-align: center;
+    padding: 20px 0;
+}
+
+.checked {
+    color: orange;
+}
+
+.review-section {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+    padding: 50px;
+    height: 200px;
+    background-color: #e5e7eb;
+}
+
+.customer-review {
+    color: #1f2937;
+    font-style: italic;
+    font-size: large;
+}
+
+.customer-name {
+    font-size: 18px;
+    font-weight: 700;
+    align-self: flex-end;
+    padding: 0 65px;
+}
+
+.call-to-action {
+    display: flex;
+    background-color: #3882f6;
+    margin: 50px 150px;
+    justify-content: space-around;
+    align-items: center;
+    border-radius: 5px;
+    padding: 20px;
+    color: white;
+    font-size: 16px;
+    flex-wrap: wrap;
+    gap: 20px;
+}
+
+.cta-heading {
+    font-size: 20px;
+    font-weight: 600;
+}
+
+.cta-button {
+    padding: 6px 30px;
+    border: 1px solid white;
+    color: white;
+    background-color: #3882f6;
+    border-radius: 5px;
 }
