--- a/projects/odin-recipes/style.css
+++ b/projects/odin-recipes/style.css
@@ -110,3 +110,9 @@ body {
     padding: 8px 20px;
     border-radius: 8px;
 }
+
+footer {
+    margin-top: 100px;
+    text-align: center;
+    padding: 20px 0;
+}
