--- a/projects/odin-recipes/style.css
+++ b/projects/odin-recipes/style.css
@@ -4,6 +4,7 @@
     padding: 0;
 }
 
+
 header {
     display: flex;
     justify-content: space-between;
@@ -36,11 +37,14 @@ input {
     color: white;
     font-size: 46px;
     justify-content: center;
-    font-weight: 700;
+    font-weight: 500;
     padding: 20px;
     padding-left: 40px;
     height: 200px;
-    margin-bottom: 30px;
+    font-family: "Pacifico", cursive;
+    line-height: 1em;
+    margin-bottom: 70px;
+    margin-top: 20px;
     /* rgb(227, 178, 97) */
 }
 
@@ -91,6 +95,7 @@ a {
 .recipe-intro {
     flex: 0 1 500px;
     padding: 20px;
+    font-family: "Roboto", sans-serif;
 }
 
 summary {
