--- a/projects/odin-recipes/style.css
+++ b/projects/odin-recipes/style.css
@@ -109,6 +109,11 @@ body {
     background-color: white;
     padding: 8px 20px;
     border-radius: 8px;
+    transition: box-shadow 0.15s;
+}
+
+.see-full-recipe:hover {
+    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
 }
 
 footer {
