--- a/projects/odin-recipes/style.css
+++ b/projects/odin-recipes/style.css
@@ -14,19 +14,53 @@ header {
 }
 
 .input {
-    border: none;
+    display: flex;
+    gap: 0;
+    background-color: white;
+    border: 2px solid rgb(227, 178, 97);
     border-radius: 8px;
-    width: 400px;
-    padding: 4px 6px;
 }
 
 input {
-    width: 100%;
-    color: blue;
-    border: 2px solid rgb(227, 178, 97);
-    border-radius: 8px;
-    padding: 8px 12px;
+    padding: 4px 8px;
     outline: none;
+    padding-left: 10px;
+    border: none;
+    border-radius: 8px;
+}
+
+input:focus {
+    outline: none;
+}
+
+.cancel-search, .search-icon {
+    height: 24px;
+    width: 30px;
+    padding: 4px 8px;
+}
+
+.search-icon {
+    height: 24px;
+    width: 30px;
+    border: none;
+    border-radius: 0 6px 6px 0;
+    cursor: pointer;
+    background-color: rgb(238, 231, 219)
+}
+
+.cancel-search {
+    height: 24px;
+    width: 30px;
+    background-color: white;
+    border-radius: 8px;
+    cursor: pointer;
+    border: none;
+}
+
+img {
+    width: 100%;
+    height: 100%;
+    
 }
 
 .website-banner {
